--- a/index.html
+++ b/index.html
@@ -656,7 +656,9 @@
 					<h2 class="contacts__title" data-splitting>Контакты</h2>
 					<div class="contacts__inner">
 						<div class="contacts__map">
-							<div style="position:relative;overflow:hidden;height: 100%;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/volochayevskaya_ulitsa_40gs4/Z04YcABkQUIBQFtvfXt0cH9hZA==/?ll=37.674876%2C55.751320&utm_medium=mapframe&utm_source=maps&z=17.21" style="color:#eee;font-size:12px;position:absolute;top:14px;">Волочаевская улица, 40Гс4 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=37.674876%2C55.751320&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NjcxMjU4MhJI0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAsINCS0L7Qu9C-0YfQsNC10LLRgdC60LDRjyDRg9C70LjRhtCwLCA0MNCT0YE0IgoNE7MWQhVaAV9C&z=17.21" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+							<div style="position:relative;overflow:hidden;height: 100%;">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.414699438888!2d37.672458977374475!3d55.75129797308364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a95ad20b303%3A0x169f5592df404faa!2z0JLQvtC70L7Rh9Cw0LXQstGB0LrQsNGPINGD0LsuLCA0MNCTINGB0YLRgNC-0LXQvdC40LUgNCwg0Y3Rgi4gMiwg0JzQvtGB0LrQstCwLCAxMTEwMzM!5e0!3m2!1sru!2sru!4v1689066783511!5m2!1sru!2sru"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							</div>
 						</div>
 						<div class="contacts__item">
 							<div class="contacts__top">
