--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
 					<div class="video__item" data-gallery>
 						<a data-lg-size="1280-720" data-video='{"source": [{"src":"img/video.mp4", "type":"video/mp4"}], "attributes": {"preload": false, "controls": true, "playsinline": true}}'>
 							<picture><source srcset="img/poster.webp" type="image/webp"><img class="img-responsive" src="img/poster.jpg" /></picture>
+							<img class="img-responsive-mob" src="img/poster-mob.jpg" />
 							<svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M40 0C17.9086 0 0 17.9086 0 40C0 62.0914 17.9086 80 40 80C62.0914 80 80 62.0914 80 40C79.9766 17.9185 62.0817 0.0236049 40 0ZM56.8456 41.2745C56.5687 41.83 56.1185 42.2803 55.5629 42.5572V42.5714L32.7057 54.0001C31.2941 54.7054 29.5782 54.133 28.8727 52.7214C28.6721 52.3201 28.5688 51.8771 28.5714 51.4286V28.5715C28.5707 26.9935 29.8492 25.7138 31.4272 25.713C31.871 25.7128 32.3088 25.8159 32.7057 26.0143L55.5629 37.443C56.9751 38.1468 57.5495 39.8622 56.8456 41.2745Z" fill="white" fill-opacity="0.5" />
 							</svg>
